--- a/index.html
+++ b/index.html
@@ -77,7 +77,9 @@
                 <div class="box-content">
                     <img src="img/water_blue.png" alt="Blue water symbol, user reported." draggable="false">
                     <h5>
-                        <span class="bold" id="topbold">Since 12:32 PM, 400-500 feet away<br>27 users have reported outages<br></span>
+                        <span class="bold" id="topbold">Since 12:32 PM, 400-500 feet away<br>
+                            <img id="pfp-lineup" class="line-one" src="img/pfp_lineup1_white.png" alt="Profile pictures of users who reported an outage." draggable="false">
+                            27 users have reported outages<br></span>
                         Water outages in homes, sinking and bath units.<br><span class="bold" id="blue">Is this outage still active?</span>
                     </h5>
                 </div>
@@ -87,7 +89,9 @@
                 <div class="box-content">
                     <img src="img/electric_yellow.png" alt="Yellow electric symbol, user reported." draggable="false">
                     <h5>
-                        <span class="bold" id="topbold">Since 2:38 PM, 0.2 miles away<br>23 users have reported outages<br></span>
+                        <span class="bold" id="topbold">Since 2:38 PM, 0.2 miles away<br>
+                            <img id="pfp-lineup" class="line-two" src="img/pfp_lineup2_white.png" alt="Profile pictures of users who reported an outage." draggable="false">
+                            23 users have reported outages<br></span>
                         Electricity outages near traffic lights.<br><span class="bold" id="yellow">Is this outage still active?</span>
                     </h5>
                 </div>
@@ -97,7 +101,9 @@
                 <div class="box-content">
                     <img src="img/water_blue.png" alt="Blue water symbol, user reported." draggable="false">
                     <h5>
-                        <span class="bold" id="topbold">Since 5:50 PM, 600 feet away<br>19 users have reported outages<br></span>
+                        <span class="bold" id="topbold">Since 5:50 PM, 600 feet away<br>
+                            <img id="pfp-lineup" class="line-three" src="img/pfp_lineup3_white.png" alt="Profile pictures of users who reported an outage." draggable="false">
+                            19 users have reported outages<br></span>
                         Faulty plumbing in outdoor water faucets.<br><span class="bold" id="blue">Is this outage still active?</span>
                     </h5>
                 </div>
@@ -107,7 +113,9 @@
                 <div class="box-content">
                     <img src="img/electric_yellow.png" alt="Yellow electric symbol, user reported." draggable="false">
                     <h5>
-                        <span class="bold" id="topbold">Since 2:37 PM, 0.6 miles away<br>15 users have reported outages<br></span>
+                        <span class="bold" id="topbold">Since 2:37 PM, 0.6 miles away<br>
+                            <img id="pfp-lineup" class="line-four" src="img/pfp_lineup4_white.png" alt="Profile pictures of users who reported an outage." draggable="false">
+                            15 users have reported outages<br></span>
                          Outages affecting air conditioning units.<br><span class="bold" id="yellow">Is this outage still active?</span>
                     </h5>
                 </div>
@@ -117,7 +125,9 @@
                 <div class="box-content">
                     <img src="img/electric_yellow.png" alt="Yellow electric symbol, user reported." draggable="false">
                     <h5>
-                        <span class="bold" id="topbold">Since 5:38 PM, 0.2 miles away<br>13 users have reported outages<br></span>
+                        <span class="bold" id="topbold">Since 5:38 PM, 0.2 miles away<br>
+                            <img id="pfp-lineup" class="line-one" src="img/pfp_lineup1_white.png" alt="Profile pictures of users who reported an outage." draggable="false">
+                            13 users have reported outages<br></span>
                         Outages impacting E-Bike charging stations.<br><span class="bold" id="yellow">Is this outage still active?</span>
                     </h5>
                 </div>
@@ -127,7 +137,9 @@
                 <div class="box-content">
                     <img src="img/water_blue.png" alt="Blue water symbol, user reported." draggable="false">
                     <h5>
-                        <span class="bold" id="topbold">Since 6:17 PM, 0.7 miles away<br>9 users have reported outages<br></span>
+                        <span class="bold" id="topbold">Since 6:17 PM, 0.7 miles away<br>
+                            <img id="pfp-lineup" class="line-two" src="img/pfp_lineup2_white.png" alt="Profile pictures of users who reported an outage." draggable="false">
+                            9 users have reported outages<br></span>
                         Outages causing clogged pipes in restrooms.<br><span class="bold" id="blue">Is this outage still active?</span>
                     </h5>
                 </div>
@@ -137,7 +149,9 @@
                 <div class="box-content">
                     <img src="img/water_blue.png" alt="Blue water symbol, user reported." draggable="false">
                     <h5>
-                        <span class="bold" id="topbold">Since 6:10 PM, 800 feet away<br>4 users have reported outages<br></span>
+                        <span class="bold" id="topbold">Since 6:10 PM, 800 feet away<br>
+                            <img id="pfp-lineup" class="line-three" src="img/pfp_lineup3_white.png" alt="Profile pictures of users who reported an outage." draggable="false">
+                            4 users have reported outages<br></span>
                         Water outages affecting sprinklers in lawns.<br><span class="bold" id="blue">Is this outage still active?</span>
                     </h5>
                 </div>
@@ -153,7 +167,9 @@
                 <div class="box-content">
                     <img src="img/electric_dgray.png" alt="Electric water symbol, expired earlier." draggable="false">
                     <h5>
-                        <span class="bold" id="topbold">From 9:15 AM, 300 feet away<br>Related posts from 21 users<br></span>
+                        <span class="bold" id="topbold">From 9:15 AM, 300 feet away<br>
+                            <img id="pfp-lineup" class="line-four" src="img/pfp_lineup4_white.png" alt="Profile pictures of users who reported an outage." draggable="false">
+                            Related posts from 21 users<br></span>
                         Electricity outages affecting satellite dishes.<br><span class="bold">Resolved at 9:32 AM</span>
                     </h5>
                 </div>
@@ -163,7 +179,9 @@
                 <div class="box-content">
                     <img src="img/water_dgray.png" alt="Gray water symbol, expired earlier." draggable="false">
                     <h5>
-                        <span class="bold" id="topbold">From 7:36 AM, 0.4 miles away<br>Related posts from 17 users<br></span>
+                        <span class="bold" id="topbold">From 7:36 AM, 0.4 miles away<br>
+                            <img id="pfp-lineup" class="line-one" src="img/pfp_lineup1_white.png" alt="Profile pictures of users who reported an outage." draggable="false">
+                            Related posts from 17 users<br></span>
                         Water outages in park bathrooms and fountains.<br><span class="bold">Resolved at 8:12 AM</span>
                     </h5>
                 </div>
@@ -173,7 +191,9 @@
                 <div class="box-content">
                     <img src="img/water_dgray.png" alt="Gray water symbol, expired earlier." draggable="false">
                     <h5>
-                        <span class="bold" id="topbold">From 3:45 AM, 200 feet away<br>Related posts from 14 users<br></span>
+                        <span class="bold" id="topbold">From 3:45 AM, 200 feet away<br>
+                            <img id="pfp-lineup" class="line-two" src="img/pfp_lineup2_white.png" alt="Profile pictures of users who reported an outage." draggable="false">
+                            Related posts from 14 users<br></span>
                         Faulty water filtering in sinks and showers.<br><span class="bold">Resolved at 5:03 AM</span>
                     </h5>
                 </div>
@@ -183,7 +203,9 @@
                 <div class="box-content">
                     <img src="img/water_dgray.png" alt="Gray water symbol, expired earlier." draggable="false">
                     <h5>
-                        <span class="bold" id="topbold">From 8:22 AM, 0.6 miles away<br>Related posts from 8 users<br></span>
+                        <span class="bold" id="topbold">From 8:22 AM, 0.6 miles away<br>
+                            <img id="pfp-lineup" class="line-three" src="img/pfp_lineup3_white.png" alt="Profile pictures of users who reported an outage." draggable="false">
+                            Related posts from 8 users<br></span>
                         Water outages impacting ice dispensers in stores.<br><span class="bold">Resolved at 10:01 AM</span>
                     </h5>
                 </div>
@@ -193,7 +215,9 @@
                 <div class="box-content">
                     <img src="img/electric_dgray.png" alt="Electric water symbol, expired earlier." draggable="false">
                     <h5>
-                        <span class="bold" id="topbold">From 5:51 AM, 300-400 feet away<br>Related posts from 10 users<br></span>
+                        <span class="bold" id="topbold">From 5:51 AM, 300-400 feet away<br>
+                            <img id="pfp-lineup" class="line-four" src="img/pfp_lineup4_white.png" alt="Profile pictures of users who reported an outage." draggable="false">
+                            Related posts from 10 users<br></span>
                         Electricity outages affecting indoor outlets.<br><span class="bold">Resolved at 6:20 AM</span>
                     </h5>
                 </div>
@@ -203,7 +227,9 @@
                 <div class="box-content">
                     <img src="img/electric_dgray.png" alt="Electric water symbol, expired earlier." draggable="false">
                     <h5>
-                        <span class="bold" id="topbold">From 9:15 AM, 300 feet away<br>Related posts from 20 users<br></span>
+                        <span class="bold" id="topbold">From 9:15 AM, 300 feet away<br>
+                            <img id="pfp-lineup" class="line-one" src="img/pfp_lineup1_white.png" alt="Profile pictures of users who reported an outage." draggable="false">
+                            Related posts from 20 users<br></span>
                         Electricity outages affecting satellite dishes in homes.<br><span class="bold">Resolved at 9:59 AM</span>
                     </h5>
                 </div>
