--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <div class="report-container">
             <img id="report" src="img/report_light.png" alt="Report Button" draggable="false">
-            <h2>Report An Outage</h2>
+            <h2>Report an Outage</h2>
         </div>
 
         <br>
