--- a/map.html
+++ b/map.html
@@ -18,6 +18,27 @@
         <h1>Map</h1>
         <hr>
 
+        <div class="report-container">
+            <img id="report" src="img/report_light.png" alt="Report Button" draggable="false">
+            <h2>Sort by Filters</h2>
+        </div>
+
+        <br>
+
+        <img class="map-box" src="img/map_landscape_white.jpg" alt="Map of Manhattan, partially including Brooklyn" draggable="false">
+
+        <div class="box-container">
+
+            <div class="box" id="electric">
+                <div class="box-content">
+                    <img src="img/electric_black.png" alt="Black electric symbol, verified alert." draggable="false">
+                    <h5>
+                        <span class="bold" id="topbold">Scheduled for 10:30 PM, 0.5 miles away<br>Verified by ConEdison<br></span>
+                        An electricity outage is scheduled for undergoing renovations underground.
+                    </h5>
+                </div>
+            </div>
+
         <div class="navigation">
             <div class="logo">
                 <img id="logo-icon" src="img/logo_white.png" alt="Outlet Logo" draggable="false">
