--- a/inbox.html
+++ b/inbox.html
@@ -18,7 +18,46 @@
         <h1>Inbox</h1>
         <hr>
 
-        <h2 id="subhead">Recents</h2>
+        <h2 id="subhead">Today</h2>
+
+        <div class="box-container">
+
+            <div class="box" id="user">
+                <div class="box-content">
+                    <img id="gabepfp" src="img/gabepfp_white.png" alt="gabe t.'s PFP" draggable="false">
+                    <h5>
+                        <span class="bold" id="topbold">gabe t. commented<br>Today at 8:31 PM<br></span>
+                        theres a food drive taking place by city hall, maybe you would be interested?<br><span class="bold" id="blue">Message</span>
+                    </h5>
+                </div>
+            </div>
+
+            <div class="box" id="user">
+                <div class="box-content">
+                    <img id="rachelpfp" src="img/rachelpfp_white.png" alt="Rachel S.'s PFP" draggable="false">
+                    <h5>
+                        <span class="bold" id="topbold">Rachel S. commented<br>Today at 8:03 PM<br></span>
+                        Thank you! Would you be fine with me coming later today to pick it up?<br><span class="bold" id="blue">Message</span>
+                    </h5>
+                </div>
+            </div>
+
+            <div class="box" id="user">
+                <div class="box-content">
+                    <img id="gracepfp" src="img/gracepfp_white.png" alt="grace xu's PFP" draggable="false">
+                    <h5>
+                        <span class="bold" id="topbold">grace xu commented<br>Today at 7:55 PM<br></span>
+                        is the power in your apartment still out? mine just came back on<br><span class="bold" id="blue">Message</span>
+                    </h5>
+                </div>
+            </div>
+
+        </div>
+
+        <h2 id="subhead">Last 30 Days</h2>
+        <br>
+
+
 
 
         <div class="navigation">
