--- a/map.html
+++ b/map.html
@@ -17,22 +17,36 @@
         <h1>Map</h1>
         <hr>
 
-        <div class="report-container">
-            <h2></h2>
-        </div>
-
-        <br>
+        <br><br>
         <img class="map-box" src="img/map_landscape_white.jpg" alt="Map of Manhattan, partially including Brooklyn" draggable="false">
+
         <div class="box-container">
+
             <div class="box" id="electric">
                 <div class="box-content">
-                    <img src="img/electric_black.png" alt="Black electric symbol, verified alert." draggable="false">
+                    <img src="img/electric_black.png" alt="Black electric symbol" draggable="false">
                     <h5>
-                        <span class="bold" id="topbold">Scheduled for 10:30 PM, 0.5 miles away<br>Verified by ConEdison<br></span>
-                        An electricity outage is scheduled for undergoing renovations underground.
+                        <span class="bold" id="topbold">Electricity Outages<br>5 Total Alerts</span>
+                        2 verified outages,<br>
+                        3 user reported outages.
                     </h5>
                 </div>
             </div>
+
+            <div class="box" id="water">
+                <div class="box-content">
+                    <img src="img/water_white.png" alt="White water symbol." draggable="false">
+                    <h5>
+                        <span class="bold" id="topbold">Water Outages<br>6 Total Alerts<br></span>
+                        2 verified outages,<br>
+                        3 user reported outages.
+                    </h5>
+                </div>
+            </div>
+        </div>
+
+        <br><br><br><br><br><br><br>
+
         <div class="navigation">
             <div class="logo">
                 <img id="logo-icon" src="img/logo_white.png" alt="Outlet Logo" draggable="false">
@@ -75,7 +89,6 @@
             <div class="alert-bg"></div>
         </div>
 
-        <br><br><br><br><br><br><br>
     </body>
 
     <script>
