--- a/settings.html
+++ b/settings.html
@@ -18,6 +18,40 @@
         <h1>Settings</h1>
         <hr>
 
+        <div class="box-container">
+
+            <div class="box" id="user">
+                <div class="box-content">
+                    <h5>
+                        Profile<br>
+                        Location<br>
+                        Contacts<br>
+                        Camera<br>
+                        Cellular Data<br>
+                    </h5>
+                </div>
+            </div>
+
+            <div class="box" id="user">
+                <div class="box-content">
+
+                </div>
+            </div>
+
+            <div class="box" id="user">
+                <div class="box-content">
+                    <h5>
+                        Profile<br>
+                        Location<br>
+                        Contacts<br>
+                        Camera<br>
+                        Cellular Data<br>
+                    </h5>
+                </div>
+            </div>
+
+        </div>
+
         <div class="navigation">
             <div class="logo">
                 <img id="logo-icon" src="img/logo_white.png" alt="Outlet Logo" draggable="false">
