--- a/inbox.html
+++ b/inbox.html
@@ -18,7 +18,7 @@
         <h1>Inbox</h1>
         <hr>
 
-        <h2 id="subhead">Today</h2>
+        <h2 id="subhead">Today's Messages</h2>
 
         <div class="box-container">
 
@@ -51,14 +51,82 @@
                     </h5>
                 </div>
             </div>
+        
+        </div>
+
+        <h2 id="subhead">Today's Alerts</h2>
+
+        <div class="box-container">
+
+            <div class="box" id="user">
+                <div class="box-content">
+                    <img src="img/electric_yellow.png" alt="Yellow electric symbol, user reported." draggable="false">
+                    <h5>
+                        <span class="bold" id="topbold">Since 5:38 PM, 0.2 miles away<br>Unresolved Alert<br></span>
+                            3 more users have reported on the same outage; 1 verified source has provided info.<br><span class="bold" id="yellow">Is this outage still active?</span>
+                    </h5>
+                </div>
+            </div>
+
+            <div class="box" id="user">
+                <div class="box-content">
+                    <img src="img/water_blue.png" alt="Blue water symbol, user reported." draggable="false">
+                    <h5>
+                        <span class="bold" id="topbold">Since 6:17 PM, 0.7 miles away<br>Unresolved Alert<br></span>
+                            4 more users have reported on the same outage; alert still pending a verified source.<br><span class="bold" id="blue">Is this outage still active?</span>
+                    </h5>
+                </div>
+            </div>
+
+            <div class="box" id="user">
+                <div class="box-content">
+                    <img src="img/electric_dgray.png" alt="Electric water symbol, expired earlier." draggable="false">
+                    <h5>
+                        <span class="bold" id="topbold">From 5:51 AM, 300-400 feet away<br>Resolved Alert<br></span>
+                       Verified sources have confirmed the outage has been addressed.<br><span class="bold">Resolved at 6:20 AM</span>
+                    </h5>
+                </div>
+            </div>
+
+            <div class="box" id="user">
+                <div class="box-content">
+                    <img src="img/electric_dgray.png" alt="Electric water symbol, expired earlier." draggable="false">
+                    <h5>
+                        <span class="bold" id="topbold">From 9:15 AM, 300 feet away<br>Resolved Alert<br></span>
+                        Verified sources have confirmed the outage has been addressed.<br><span class="bold">Resolved at 9:59 AM</span>
+                    </h5>
+                </div>
+            </div>
 
         </div>
 
         <h2 id="subhead">Last 30 Days</h2>
-        <br>
 
+        <div class="box-container">
 
+            <div class="box" id="user">
+                <div class="box-content">
+                    <img id="leepfp" src="img/leepfp_white.png" alt="Dr. Lee's PFP" draggable="false">
+                    <h5>
+                        <span class="bold" id="topbold">Dr. Lee commented<br>Yesterday at 5:01 PM<br></span>
+                        Let ppl who may be interested know that they're handing out free first-aid kits by the office<br><span class="bold" id="blue">Message</span>
+                    </h5>
+                </div>
+            </div>
 
+            <div class="box" id="user">
+                <div class="box-content">
+                    <img src="img/water_blue.png" alt="Blue water symbol, user reported." draggable="false">
+                    <h5>
+                        <span class="bold" id="topbold">Since 5:13 AM, 0.5 miles away<br>Unresolved Alert<br></span>
+                            8 more users have reported on the same outage; alert still pending a verified source.<br><span class="bold" id="blue">Is this outage still active?</span>
+                    </h5>
+                </div>
+            </div>
+
+        </div>
+
+        <br><br><br><br><br><br><br>
 
         <div class="navigation">
             <div class="logo">
