--- a/inbox.html
+++ b/inbox.html
@@ -27,7 +27,7 @@
                     <img id="gabepfp" src="img/gabepfp_white.png" alt="gabe t.'s PFP" draggable="false">
                     <h5>
                         <span class="bold" id="topbold">gabe t. commented<br>Today at 8:31 PM<br></span>
-                        theres a food drive taking place by city hall, maybe you would be interested?<br><span class="bold" id="blue">Message</span>
+                        theres a food drive taking place by city hall, maybe you would be interested?<br><span class="bold" id="gray">Message</span>
                     </h5>
                 </div>
             </div>
@@ -37,7 +37,7 @@
                     <img id="rachelpfp" src="img/rachelpfp_white.png" alt="Rachel S.'s PFP" draggable="false">
                     <h5>
                         <span class="bold" id="topbold">Rachel S. commented<br>Today at 8:03 PM<br></span>
-                        Thank you! Would you be fine with me coming later today to pick it up?<br><span class="bold" id="blue">Message</span>
+                        Thank you! Would you be fine with me coming later today to pick it up?<br><span class="bold" id="gray">Message</span>
                     </h5>
                 </div>
             </div>
@@ -47,7 +47,7 @@
                     <img id="gracepfp" src="img/gracepfp_white.png" alt="grace xu's PFP" draggable="false">
                     <h5>
                         <span class="bold" id="topbold">grace xu commented<br>Today at 7:55 PM<br></span>
-                        is the power in your apartment still out? mine just came back on<br><span class="bold" id="blue">Message</span>
+                        is the power in your apartment still out? mine just came back on<br><span class="bold" id="gray">Message</span>
                     </h5>
                 </div>
             </div>
@@ -109,7 +109,7 @@
                     <img id="leepfp" src="img/leepfp_white.png" alt="Dr. Lee's PFP" draggable="false">
                     <h5>
                         <span class="bold" id="topbold">Dr. Lee commented<br>Yesterday at 5:01 PM<br></span>
-                        Let ppl who may be interested know that they're handing out free first-aid kits by the office<br><span class="bold" id="blue">Message</span>
+                        Let ppl who may be interested know that they're handing out free first-aid kits by the office<br><span class="bold" id="gray">Message</span>
                     </h5>
                 </div>
             </div>
