--- a/settings.html
+++ b/settings.html
@@ -16,41 +16,56 @@
     <body>
 
         <h1>Settings</h1>
-        <hr>
+        <hr class="line">
+        <br>
 
         <div class="box-container">
 
             <div class="box" id="user">
                 <div class="box-content">
-                    <h5>
+                    <h2>
                         Profile<br>
-                        Location<br>
-                        Contacts<br>
-                        Camera<br>
-                        Cellular Data<br>
-                    </h5>
+                        <hr class="box-line">
+                        About<br>
+                    </h2>
                 </div>
             </div>
 
+            <br>
+
             <div class="box" id="user">
                 <div class="box-content">
-
+                    <h2>
+                        Notifications<br>
+                        <hr class="box-line">
+                        Privacy<br>
+                        <hr class="box-line">
+                        Data Usage<br>
+                        <hr class="box-line">
+                        Language<br>
+                        <hr class="box-line">
+                        Power Saving<br>
+                    </h2>
                 </div>
             </div>
 
+            <br>
+
             <div class="box" id="user">
                 <div class="box-content">
-                    <h5>
-                        Profile<br>
-                        Location<br>
-                        Contacts<br>
-                        Camera<br>
-                        Cellular Data<br>
-                    </h5>
+                    <h2>
+                        Support & FAQ<br>
+                        <hr class="box-line">
+                        Report An Error<br>
+                        <hr class="box-line">
+                        Log Out<br>
+                    </h2>
                 </div>
             </div>
 
         </div>
+
+        <br><br><br><br><br><br><br>
 
         <div class="navigation">
             <div class="logo">
