--- a/community.html
+++ b/community.html
@@ -27,7 +27,7 @@
             <img id="report" src="img/report_light.png" alt="Report Button" draggable="false">
             <h2>Make a Post</h2>
             &nbsp;&nbsp;&nbsp;&nbsp;
-            <img id="report" src="img/report_light.png" alt="Report Button" draggable="false">
+            <img id="filter" src="img/filter_light.png" alt="Filter Button" draggable="false">
             <h2>Filter</h2>
         </div>
 
